@@ -150,6 +150,7 @@ Data Changes:
 - Corrected mistranslations, bad weapon entries, and missing content from Datapuls SOTA 2080. Existing characters that use these items will usually need to remove and re-add them to see any changes.
 - Added missing content from Datapuls SOX and the German versions of Parabotany, Parageology, and Parazoology (all of which are for SR5e).
 - Added missing content from Shadows in Focus: Morocco and Shadows in Focus: Casablanca-Rabat.
+- Corrected cases where content from Datapuls SOX and Datapuls Österreich were sourced to the collection of Schattenhandbuch 3 instead of their specific books.
 - Armor mods for custom liners have now had their categories renamed to be more generic.
 - Foci, formulae, and magical supplies and compounds will now use "Force" instead of "Rating" where appropriate.
 
